MainTableViewModel created and DetailViewController refreshUI

--- a/RedditClient/Base.lproj/Main.storyboard
+++ b/RedditClient/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="1sH-WV-7gS">
             <objects>
-                <viewController id="bZC-Xx-HeF" sceneMemberID="viewController">
+                <viewController id="bZC-Xx-HeF" customClass="DetailViewController" customModule="RedditClient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="SWr-ze-3Nc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -61,7 +61,7 @@
             </objects>
             <point key="canvasLocation" x="-394.20289855072468" y="539.0625"/>
         </scene>
-        <!--Root View Controller-->
+        <!--Reddit Top Posts-->
         <scene sceneID="1mL-M3-AYO">
             <objects>
                 <tableViewController clearsSelectionOnViewWillAppear="NO" id="VQP-vF-kJV" customClass="MainTableViewController" customModule="RedditClient" customModuleProvider="target" sceneMemberID="viewController">
@@ -102,7 +102,7 @@
                                                 <constraint firstAttribute="height" constant="70" id="IwF-1R-fHR"/>
                                             </constraints>
                                             <color key="textColor" systemColor="labelColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         </textView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Comments 4221" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZB-Sn-GaI">
@@ -177,7 +177,7 @@
                             <outlet property="delegate" destination="VQP-vF-kJV" id="HXd-0E-hxk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="sa9-yN-Pml"/>
+                    <navigationItem key="navigationItem" title="Reddit Top Posts" id="sa9-yN-Pml"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="23K-d1-bvP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
