--- a/RedditClient/Base.lproj/Main.storyboard
+++ b/RedditClient/Base.lproj/Main.storyboard
@@ -99,6 +99,9 @@
                                                 <color key="titleColor" systemColor="labelColor"/>
                                                 <imageReference key="image" image="trash.fill" catalog="system" symbolScale="small" renderingMode="original"/>
                                             </state>
+                                            <connections>
+                                                <action selector="dismissTapped:" destination="DCJ-cO-7QT" eventType="touchUpInside" id="q5f-5W-AIa"/>
+                                            </connections>
                                         </button>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" editable="NO" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu." selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mJF-bv-oY3">
                                             <rect key="frame" x="16" y="35" width="304" height="70"/>
@@ -184,6 +187,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Reddit Top Posts" id="sa9-yN-Pml"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="WnC-yV-APp">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </refreshControl>
                 </tableViewController>
