--- a/RedditClient/Base.lproj/Main.storyboard
+++ b/RedditClient/Base.lproj/Main.storyboard
@@ -185,7 +185,13 @@
                             <outlet property="delegate" destination="VQP-vF-kJV" id="HXd-0E-hxk"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Reddit Top Posts" id="sa9-yN-Pml"/>
+                    <navigationItem key="navigationItem" title="Reddit Top Posts" id="sa9-yN-Pml">
+                        <barButtonItem key="rightBarButtonItem" image="trash.circle.fill" catalog="system" id="5F3-Yt-lLz">
+                            <connections>
+                                <action selector="dismissAllCells:" destination="VQP-vF-kJV" id="phK-Ol-edR"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="WnC-yV-APp">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -227,6 +233,7 @@
     </scenes>
     <resources>
         <image name="circle.fill" catalog="system" width="128" height="121"/>
+        <image name="trash.circle.fill" catalog="system" width="128" height="121"/>
         <image name="trash.fill" catalog="system" width="121" height="128"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
