--- a/RedditClient/Base.lproj/Main.storyboard
+++ b/RedditClient/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92S-FL-0iD">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="92S-FL-0iD">
                                 <rect key="frame" x="132" y="299" width="150" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="Rt8-f9-xAW"/>
